[gd_scene load_steps=21 format=2]

[ext_resource path="res://game_objects/moto.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_objects/rider.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Rider.gd" type="Script" id=3]
[ext_resource path="res://game_objects/OnFootController.gd" type="Script" id=4]
[ext_resource path="res://source_assets/mount_indicator.png" type="Texture" id=5]
[ext_resource path="res://game_objects/Moto.gd" type="Script" id=6]
[ext_resource path="res://game_objects/WaypointSensor.gd" type="Script" id=7]
[ext_resource path="res://source_assets/sfx/moto_move.ogg" type="AudioStream" id=8]
[ext_resource path="res://source_assets/sfx/electricity.ogg" type="AudioStream" id=9]

[sub_resource type="CapsuleShape" id=3]
radius = 1.18797
height = 3.80676

[sub_resource type="CylinderShape" id=12]
height = 14.121

[sub_resource type="RayShape" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 1.07495
height = 4.85928

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 3.93409, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.2
bottom_radius = 0.2
height = 5.0

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.992157, 1, 0, 1 )

[sub_resource type="PrismMesh" id=11]

[node name="Rider" type="Spatial"]
script = ExtResource( 3 )

[node name="onfoot_body" type="KinematicBody" parent="."]
collision_layer = 8
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="onfoot_body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.00023, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="onfoot_body"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="onfoot_body/Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.00023, 0 )
shape = SubResource( 3 )

[node name="rider" parent="." instance=ExtResource( 2 )]

[node name="WaypointSensor" type="Area" parent="rider"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="rider/WaypointSensor"]
shape = SubResource( 12 )

[node name="SpringArm" type="SpringArm" parent="rider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.54921, 0 )
shape = SubResource( 2 )
spring_length = 16.0
margin = 0.3

[node name="CameraSlot" type="Spatial" parent="rider/SpringArm"]

[node name="VehicleBody" type="VehicleBody" parent="."]
collision_layer = 2
collision_mask = 3
mass = 12.9592
continuous_cd = true
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 6 )

[node name="audio_player" type="AudioStreamPlayer3D" parent="VehicleBody"]
stream = ExtResource( 8 )
autoplay = true

[node name="audio_player2" type="AudioStreamPlayer3D" parent="VehicleBody"]
stream = ExtResource( 9 )
attenuation_model = 3

[node name="CollisionShape" type="CollisionShape" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79346, -0.156367 )
shape = SubResource( 1 )

[node name="wheel_front" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.06249, 0.673, -2.271 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.0
wheel_radius = 0.8
wheel_rest_length = 0.5
suspension_stiffness = 10.0

[node name="wheel_front2" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.06919, 0.673, -2.271 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.0
wheel_radius = 0.8
wheel_rest_length = 0.5
suspension_stiffness = 10.0

[node name="wheel_back" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.062, 0.673, 2.257 )
use_as_traction = true
wheel_roll_influence = 0.0
wheel_radius = 0.8
wheel_rest_length = 0.5
suspension_stiffness = 10.0

[node name="wheel_back2" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.069, 0.673, 2.257 )
use_as_traction = true
wheel_roll_influence = 0.0
wheel_radius = 0.8
wheel_rest_length = 0.5
suspension_stiffness = 10.0

[node name="moto" parent="VehicleBody" instance=ExtResource( 1 )]

[node name="MountIndicator" type="MeshInstance" parent="VehicleBody"]
transform = Transform( 2.54255, 0, 0, 0, 1, 0, 0, 0, 2.54255, 0, 0.267109, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="VehicleBody/MountIndicator"]
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="VehicleBody/MountIndicator/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.37568, 0 )
shape = SubResource( 6 )

[node name="DBG_1" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="DBG_1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -2.5 )
material_override = SubResource( 8 )
mesh = SubResource( 9 )

[node name="DBG_2" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="DBG_2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -2.5 )
material_override = SubResource( 10 )
mesh = SubResource( 9 )

[node name="DBG_3" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="DBG_3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 10 )
mesh = SubResource( 11 )
